# sview-fmindex

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
bench/: Cargo.toml  run_bench.sh  run_benchmark.sh
bench/src/: generate.rs  main.rs
bench/src/locate/: mod.rs  sview_memory.rs  sview_mmap.rs
benches/memory_vs_disk_mmap/: mod.rs
src/: builder.rs  debug.rs  lib.rs  load_from_blob.rs  text_length.rs
src/builder/: mod.rs
src/builder/build_config/: lookup_table_config.rs  mod.rs  suffix_array_config.rs
src/components/: count_array.rs  encoding_table.rs  mod.rs
src/components/bwm/: mod.rs
src/components/bwm/blocks/: block2.rs  block3.rs  block4.rs  block5.rs  block6.rs
src/components/suffix_array/: mod.rs
src/components/suffix_array/burrow_wheeler_transform/crate_bio_manual/: mod.rs
src/components/suffix_array/burrow_wheeler_transform/libdivsufsort/: mod.rs
src/core/: mod.rs  text_length.rs
src/locate/: indices.rs  mod.rs  pattern.rs  plain_text.rs  symbol_indices.rs
src/new_algorithm/: mod.rs
src/tests/: mod.rs
src/tests/accurate_result/: mod.rs
src/tests/config_invariance/: mod.rs
src/tests/get_accurate_result/: mod.rs
src/tests/locate_consistency/: mod.rs
src/tests/readme/: mod.rs
src/tests/save_and_load/: mod.rs
sview-fmindex/: Cargo.toml
sview-fmindex/benches/: benchmark.rs
sview-fmindex/benches/locate/: mod.rs
sview-fmindex/benches/locate_vs_buffer/: mod.rs
sview-fmindex/benches/locate_with_raw_index/: mod.rs
sview-fmindex/benches/memory_vs_disk_mmap/: mod.rs
sview-fmindex/benches/perf_by_vector_size/: mod.rs
sview-fmindex/benches/serialize/: serde_ser.rs  zero_copy_ser.rs
sview-fmindex/benches/sorting/: mod.rs
sview-fmindex/src/: lib.rs  load_from_blob.rs  reference_to_source_blob.rs  text_encoder.rs
sview-fmindex/src/builder/: mod.rs
sview-fmindex/src/builder/build_config/: lookup_table_config.rs  suffix_array_config.rs
sview-fmindex/src/components/: count_array.rs  magic_number.rs  mod.rs
sview-fmindex/src/components/bwm/: mod.rs
sview-fmindex/src/components/bwm/blocks/: block2.rs  block3.rs  block4.rs  block5.rs  block6.rs  mod.rs  vector.rs
sview-fmindex/src/components/suffix_array/: mod.rs
sview-fmindex/src/components/suffix_array/burrow_wheeler_transform/: mod.rs
sview-fmindex/src/components/text_encoder/: mod.rs
sview-fmindex/src/components/text_encoder/text_encoders/: encoding_table.rs  mod.rs  pass_through.rs
sview-fmindex/src/locate/: indices.rs  mod.rs  pattern.rs  with_rev_iter.rs  with_slice.rs  with_text_encoder.rs
sview-fmindex/src/tests/: mod.rs
sview-fmindex/src/tests/config_invariance/: mod.rs
sview-fmindex/src/tests/get_accurate_result/: mod.rs
sview-fmindex/src/tests/locate_consistency/: mod.rs
sview-fmindex/src/tests/random_data/: mod.rs
sview-fmindex/src/tests/readme/: mod.rs
sview-fmindex/src/tests/text_encoders_consistency/: mod.rs
