[package]
name = "sview-fmindex"
version = "0.1.0"
authors = ["baku4 <bahkhun@gmail.com>"]
edition = "2024"

[dependencies]
thiserror = "2"
num-traits = "0.2"

# manage blob
capwriter = { version = "0.4.2", default-features = false }
zerocopy = { version = "0.8", features = ["derive"] }
memmap2 = "0.9"

# burrow-wheeler transform
libdivsufsort-rs = { version = "0.1.4", optional = true }
# with "bio" crate
vec_map = "0.8"
bit-set = "0.5"
num-integer = "0.1"
bv = "0.11.0"
fxhash = "0.2"

[dev-dependencies]
crate_fm_index = { package = "fm-index", version = "0.1" }
rand = "0.9"
criterion = "0.3.5"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.2.15", features = ["js"] }

[[bench]]
name = "benchmark"
harness = false

[features]
default = []
fastbwt = ["libdivsufsort-rs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
